# manifold-lsp

./: Cargo.toml  README.md  SELECTIVE_PARSING_UPDATE.md  TRANSFORMATION_SUMMARY.md  esbuild.js  package.json  pnpm-lock.yaml
.github/workflows/: publish-extension.yml  publish-jetbrains.yml
client/: .vscodeignore  LICENSE  README.md  README.stub.md  package.json  pnpm-lock.yaml
client/snippets/: manifold.json
client/src/: extension.ts
client/syntaxes/: manifold.tmLanguage.json
examples/: external.js  index copy.html  index copy.ts  index.css  index.html  index.rs  index.ts  manifold-example.html  test2.html  test2.js
jetbrains/: README.md  README.stub.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
jetbrains/src/main/kotlin/com/intellij/platform/lsp/api/: LspServerDescriptorStub.kt  LspServerSupportProviderStub.kt
jetbrains/src/main/kotlin/com/manifold/jetbrains/: ManifoldExecutableLocator.kt  ManifoldLspServerSupportProvider.kt  ManifoldNotifications.kt  ManifoldPluginPaths.kt  ManifoldProcessFactory.kt  ManifoldProjectScope.kt
scripts/: check_version_bump.py  generate_icons.mjs  generate_readmes.py  sync_versions.py
src/: attribute.rs  backend.rs  client.rs  completion.rs  document.rs  expression.rs  lib.rs  lineindex.rs  main.rs  manifold_completion.rs  manifold_extract.rs  manifold_lang.rs  notification.rs  nrs_lang.rs  semantic_analyze.rs  semantic_token.rs  server.rs  state.rs
