[package]
name = "manifold-language-server"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.20"
dashmap = "5.5"

[[bin]]
name = "server"
path = "src/main.rs"