[package]
name = "manifold-language-server"
version = "1.0.3"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.20"
dashmap = "5.5"
swc_common = "0.33.21"
swc_ecma_ast = "0.111.1"
swc_ecma_parser = { version = "0.142.2", features = ["typescript"] }

[[bin]]
name = "manifold-language-server"
path = "src/main.rs"